<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/filter_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/filter_title_text"
        style="@style/Heading"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/era_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/filter_era_title"
        style="@style/FilterCategory"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_title"
        app:layout_constraintEnd_toStartOf="@id/era_spinner" />

    <Spinner
        android:id="@+id/era_spinner"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/era_title"
        app:layout_constraintStart_toEndOf="@id/era_title"
        app:layout_constraintBottom_toBottomOf="@+id/era_title" />

    <TextView
        android:id="@+id/length_title"
        style="@style/FilterCategory"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Length"
        app:layout_constraintEnd_toStartOf="@id/length_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/era_title" />

    <Spinner
        android:id="@+id/length_spinner"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@id/length_title"
        app:layout_constraintStart_toEndOf="@id/length_title"
        app:layout_constraintTop_toTopOf="@id/length_title" />

    <TextView
        android:id="@+id/difficulty_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/difficulty"
        style="@style/FilterCategory"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/length_title"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/difficulty_slider"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:valueFrom="1"
        android:valueTo="20"
        android:stepSize="1"
        app:trackColorActive="@color/easy_difficulty_primary"
        app:thumbColor="@color/easy_difficulty_primary"
        app:trackColorInactive="@color/easy_difficulty_secondary"
        app:layout_constraintTop_toBottomOf="@id/difficulty_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/difficulty_slider" />

</androidx.constraintlayout.widget.ConstraintLayout>